--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>S23 Ultra - NES Smooth Racer</title>
+    <title>S23 Ultra - NES Traffic Racer</title>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/vision_bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
     <style>
         body { margin: 0; overflow: hidden; background: #000; font-family: 'Courier New', monospace; }
         #webcam { display: none; }
-        
         #start-screen {
             position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;
             background: #000; z-index: 500; display: flex; flex-direction: column;
@@ -20,7 +19,6 @@
             background: #000; color: #fff; font-weight: bold; cursor: pointer;
         }
         .menu-btn:hover { background: #fff; color: #000; }
-
         #ui-side { position: absolute; top: 20px; left: 140px; color: #fff; z-index: 200; display: none; }
         #hud-container {
             position: absolute; top: 20px; right: 20px; width: 100px; height: 100px;
@@ -108,10 +106,13 @@
         let player, roadLines, decorGroup, enemies, cursors, smoothSteer = 0;
 
         function preload() {
-            // Senin kırmızı yarış aracın
+            // Ana aracın
             this.load.image('playerCar', 'car.png');
-            // Serbest gezen diğer araçlar (Burada 'car.png' kullandım ama farklı renkler vereceğiz)
-            this.load.image('enemyCar', 'car.png'); 
+            // Eklediğin diğer araçlar
+            this.load.image('enemy1', 'car1.png');
+            this.load.image('enemy2', 'car2.png');
+            this.load.image('enemy3', 'car3.png');
+            this.load.image('enemy4', 'car4.png');
         }
 
         function create() {
@@ -140,18 +141,17 @@
                 decorGroup.add(this.add.circle(w/2 + roadW/2 + 60, i * 180, 25, 0x004400));
             }
 
-            // Oyuncu Aracı (Kırmızı)
             player = this.physics.add.sprite(w/2, h - 150, 'playerCar').setScale(0.5).setDepth(100);
             
-            // Serbest araç üretme zamanlayıcısı
+            // Rastgele araç üretme
             this.time.addEvent({
                 delay: 2000,
                 callback: () => {
                     if (!window.controlMode) return;
                     let xPos = Phaser.Math.Between(w/2 - roadW/2 + 40, w/2 + roadW/2 - 40);
-                    let enemy = enemies.create(xPos, -100, 'enemyCar').setScale(0.5);
-                    // Diğer araçları farklı renklere boyayalım
-                    enemy.setTint(Phaser.Utils.Array.GetRandom([0x0000ff, 0x00ff00, 0xffff00, 0xff00ff]));
+                    // Rastgele bir araç modeli seçiyoruz (enemy1, enemy2, enemy3, enemy4)
+                    let randomKey = 'enemy' + Phaser.Math.Between(1, 4);
+                    let enemy = enemies.create(xPos, -100, randomKey).setScale(0.5);
                 },
                 loop: true
             });
@@ -162,18 +162,13 @@
         function update() {
             if (!window.controlMode) return;
 
-            // 1. KLAVYE İÇİN STICKY STEERING (Sürekli Direksiyon)
             if (window.controlMode === 'keyboard') {
-                if (cursors.left.isDown) {
-                    steeringInput -= 0.05;
-                } else if (cursors.right.isDown) {
-                    steeringInput += 0.05;
-                }
+                if (cursors.left.isDown) steeringInput -= 0.05;
+                else if (cursors.right.isDown) steeringInput += 0.05;
                 steeringInput = Phaser.Math.Clamp(steeringInput, -1, 1);
                 throttleInput = cursors.up.isDown ? 0.2 : 0.8;
             }
 
-            // 2. MOVEMENT
             smoothSteer = Phaser.Math.Linear(smoothSteer, steeringInput, 0.1);
             let speed = Phaser.Math.Linear(35, 5, throttleInput);
 
@@ -187,9 +182,8 @@
                 if (d.y > this.cameras.main.height) d.y = -100;
             });
 
-            // Serbest araçları hareket ettir
             enemies.getChildren().forEach(enemy => {
-                enemy.y += speed * 0.7; // Diğer araçlar bizden biraz daha yavaş gitsin
+                enemy.y += speed * 0.7; 
                 if (enemy.y > this.cameras.main.height + 100) enemy.destroy();
             });
 
@@ -200,7 +194,6 @@
 
             this.progressMarker.y = (this.cameras.main.height * 0.8) - ((speed * 20) % (this.cameras.main.height * 0.6));
 
-            // HUD
             dot.style.left = `${50 + (smoothSteer * 40)}%`;
             document.getElementById("kmh").innerText = Math.floor(speed * 9);
             document.getElementById("score").innerText = String(Math.floor(speed * 100)).padStart(6, '0');
