--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>S23 Ultra & Mi Box - Universal Racer</title>
+    <title>S23 Ultra & Mi Box - NES Accurate Racer</title>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/vision_bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
     <style>
@@ -15,35 +15,32 @@
             justify-content: center; align-items: center; color: #fff;
         }
         .menu-btn {
-            width: 320px; padding: 18px; margin: 12px; border: 4px double #555;
-            background: #111; color: #888; font-size: 18px; font-weight: bold;
-            transition: all 0.2s; outline: none; cursor: pointer; text-align: center;
+            width: 300px; padding: 15px; margin: 10px; border: 4px double #444;
+            background: #111; color: #888; font-size: 16px; font-weight: bold;
+            transition: 0.2s; outline: none; cursor: pointer; text-align: center;
         }
-        /* Hem odaklanınca hem üzerine gelince hem de aktifken parlasın */
-        .menu-btn.active, .menu-btn:hover, .menu-btn:focus {
-            border-color: #ffff00; color: #fff; background: #222;
-            transform: scale(1.05); box-shadow: 0 0 20px #f00;
+        .menu-btn.active, .menu-btn:hover {
+            border-color: #ffff00; color: #fff; background: #222; transform: scale(1.05);
         }
-        #ui-side { position: absolute; top: 20px; left: 140px; color: #fff; z-index: 200; display: none; text-shadow: 2px 2px #000; }
-        #kmh-box { font-size: 32px; font-weight: bold; color: #00ff00; }
+        #ui-side { position: absolute; top: 20px; right: 5%; color: #fff; z-index: 200; display: none; text-align: right; }
+        .retro-label { color: #ffff00; font-size: 14px; }
+        .retro-value { font-size: 28px; font-weight: bold; margin-bottom: 10px; }
     </style>
 </head>
 <body>
 
     <div id="start-screen">
-        <h1 style="color:#ffff00; text-shadow: 3px 3px #f00; font-size: 40px; margin-bottom:40px;">ROAD FIGHTER</h1>
+        <h1 style="color:#ffff00; text-shadow: 2px 2px #f00; font-size: 36px; margin-bottom:30px;">ROAD FIGHTER</h1>
         <div class="menu-btn active" data-idx="0" onclick="startGame('camera')">1. AI CAMERA</div>
         <div class="menu-btn" data-idx="1" onclick="startGame('gyro')">2. PHONE TILT</div>
         <div class="menu-btn" data-idx="2" onclick="startGame('keyboard')">3. KEYBOARD / REMOTE</div>
-        <p style="color: #666; font-size: 14px; margin-top: 20px;">DOKUNUN VEYA KUMANDA KULLANIN</p>
     </div>
 
     <div id="ui-side">
-        <div style="color: #ffff00; font-size: 16px;">1P SCORE</div>
-        <div style="font-size: 28px;" id="score">000000</div>
-        <br>
-        <div style="color: #ffff00; font-size: 16px;">VELOCITY</div>
-        <div id="kmh-box"><span id="kmh">0</span> km/h</div>
+        <div class="retro-label">1P SCORE</div>
+        <div class="retro-value" id="score">000000</div>
+        <div class="retro-label">SPEED</div>
+        <div class="retro-value" style="color:#00ff00;"><span id="kmh">0</span> km/h</div>
     </div>
 
     <video id="webcam" autoplay playsinline></video>
@@ -52,7 +49,6 @@
     <script type="module">
         import { HandLandmarker, FilesetResolver } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0";
 
-        // --- HİBRİT MENÜ YÖNETİMİ ---
         let currentIndex = 0;
         const menuButtons = document.querySelectorAll('.menu-btn');
         const modes = ['camera', 'gyro', 'keyboard'];
@@ -64,37 +60,23 @@
             });
         }
 
-        // Mouse/Dokunmatik ile üzerine gelince odağı güncelle
-        menuButtons.forEach((btn, idx) => {
-            btn.addEventListener('mouseenter', () => {
-                currentIndex = idx;
-                updateMenuVisuals();
-            });
-        });
-
         window.addEventListener('keydown', (e) => {
             if (window.controlMode === null) {
-                // Menüde Gezinme
                 if (e.key === 'ArrowDown') { currentIndex = (currentIndex + 1) % modes.length; updateMenuVisuals(); }
                 else if (e.key === 'ArrowUp') { currentIndex = (currentIndex - 1 + modes.length) % modes.length; updateMenuVisuals(); }
-                else if (e.key === 'Enter' || e.keyCode === 13 || e.keyCode === 66) { startGame(modes[currentIndex]); }
+                else if (e.key === 'Enter' || e.keyCode === 13) { startGame(modes[currentIndex]); }
             } else if (window.controlMode === 'keyboard') {
-                // Oyun İçi Kontrol
                 if (e.key === 'ArrowLeft') steeringInput -= 0.08;
                 if (e.key === 'ArrowRight') steeringInput += 0.08;
-                if (e.key === 'ArrowUp' || e.key === 'Enter') throttleInput = 0.3;
+                if (e.key === 'ArrowUp') throttleInput = 0.35;
             }
         });
 
         window.addEventListener('keyup', (e) => {
-            if (window.controlMode === 'keyboard') {
-                if (e.key === 'ArrowUp' || e.key === 'Enter') throttleInput = 0.8;
-            }
+            if (window.controlMode === 'keyboard' && e.key === 'ArrowUp') throttleInput = 0.8;
         });
 
-        // --- OYUN AYARLARI ---
         window.controlMode = null;
-        let handLandmarker;
         let steeringInput = 0; 
         let throttleInput = 0.8;
         let lastVideoTime = -1;
@@ -138,36 +120,38 @@
             const h = this.cameras.main.height;
             bgMusic = this.sound.add('gameMusic');
 
-            // NES Side Panels
-            this.add.rectangle(65, h/2, 130, h, 0x555555).setDepth(5);
-            this.add.rectangle(65, h/2, 8, h * 0.7, 0x000).setDepth(6);
-            progressMarker = this.add.rectangle(65, h * 0.8, 18, 10, 0xff0000).setDepth(7);
+            // --- ORIJINAL NES SOL PANEL (DARALTILMIŞ) ---
+            const panelW = 40; // Çok daha ince ve şık
+            this.add.rectangle(panelW/2 + 10, h/2, panelW, h, 0x555555).setDepth(5);
+            this.add.rectangle(panelW/2 + 10, h/2, 4, h * 0.8, 0x000).setDepth(6); // İnce yarış hattı
+            progressMarker = this.add.rectangle(panelW/2 + 10, h * 0.85, 12, 8, 0xff0000).setDepth(7);
 
-            const roadW = w * 0.55;
-            this.add.rectangle(w/2 - roadW/2 - 100, h/2, 200, h, 0x008800);
-            this.add.rectangle(w/2 + roadW/2 + 100, h/2, 200, h, 0x008800);
-            this.add.rectangle(w/2, h/2, roadW + 15, h, 0xffffff); 
-            this.add.rectangle(w/2, h/2, roadW, h, 0x222222); 
+            // --- YOL VE ÇİMEN (ORİJİNAL RENKLER) ---
+            const roadW = w * 0.5;
+            this.add.rectangle(w/2 - roadW/2 - 100, h/2, 200, h, 0x00aa00); // NES Yeşili
+            this.add.rectangle(w/2 + roadW/2 + 100, h/2, 200, h, 0x00aa00);
+            this.add.rectangle(w/2, h/2, roadW + 10, h, 0xffffff); // Beyaz kenar çizgileri
+            this.add.rectangle(w/2, h/2, roadW, h, 0x333333); 
 
             roadLines = this.add.group();
             decorGroup = this.add.group();
             enemies = this.physics.add.group();
 
             for(let i=0; i<12; i++) {
-                roadLines.add(this.add.rectangle(w/2, i * 130, 8, 50, 0x555555));
-                decorGroup.add(this.add.circle(w/2 - roadW/2 - 60, i * 200, 25, 0x004400));
-                decorGroup.add(this.add.circle(w/2 + roadW/2 + 60, i * 200, 25, 0x004400));
+                roadLines.add(this.add.rectangle(w/2, i * 130, 8, 50, 0xffffff));
+                decorGroup.add(this.add.circle(w/2 - roadW/2 - 50, i * 220, 20, 0x004400));
+                decorGroup.add(this.add.circle(w/2 + roadW/2 + 50, i * 220, 20, 0x004400));
             }
 
-            player = this.physics.add.sprite(w/2, h - 150, 'playerCar').setScale(0.55).setDepth(100);
+            player = this.physics.add.sprite(w/2, h - 140, 'playerCar').setScale(0.5).setDepth(100);
             
             this.time.addEvent({
-                delay: 2200,
+                delay: 2400,
                 callback: () => {
                     if (!window.controlMode) return;
-                    let xPos = Phaser.Math.Between(w/2 - roadW/2 + 50, w/2 + roadW/2 - 50);
+                    let xPos = Phaser.Math.Between(w/2 - roadW/2 + 40, w/2 + roadW/2 - 40);
                     let randomKey = 'enemy' + Phaser.Math.Between(1, 4);
-                    enemies.create(xPos, -100, randomKey).setScale(0.55).setDepth(90);
+                    enemies.create(xPos, -100, randomKey).setScale(0.5).setDepth(90);
                 },
                 loop: true
             });
@@ -177,7 +161,7 @@
             if (!window.controlMode) return;
             steeringInput = Phaser.Math.Clamp(steeringInput, -1, 1);
             smoothSteer = Phaser.Math.Linear(smoothSteer, steeringInput, 0.08);
-            let speed = Phaser.Math.Linear(16, 4, throttleInput);
+            let speed = Phaser.Math.Linear(15, 4, throttleInput);
 
             roadLines.getChildren().forEach(line => {
                 line.y += speed;
@@ -190,21 +174,23 @@
             });
 
             enemies.getChildren().forEach(enemy => {
-                enemy.y += speed * 0.65; 
+                enemy.y += speed * 0.6; 
                 if (enemy.y > this.cameras.main.height + 150) enemy.destroy();
             });
 
-            let roadLimit = this.cameras.main.width * 0.24;
+            let roadLimit = this.cameras.main.width * 0.22;
             player.x = (this.cameras.main.width/2) + (smoothSteer * (this.cameras.main.width * 0.28));
             player.x = Phaser.Math.Clamp(player.x, this.cameras.main.width/2 - roadLimit, this.cameras.main.width/2 + roadLimit);
-            player.angle = smoothSteer * 12;
+            player.angle = smoothSteer * 10;
 
-            progressMarker.y = (this.cameras.main.height * 0.8) - ((speed * 20) % (this.cameras.main.height * 0.6));
+            // NES İlerleme Çubuğu Güncelleme (Minimalist)
+            progressMarker.y = (this.cameras.main.height * 0.85) - ((speed * 18) % (this.cameras.main.height * 0.7));
 
             document.getElementById("kmh").innerText = Math.floor(speed * 8);
-            document.getElementById("score").innerText = String(Math.floor(speed * 120)).padStart(6, '0');
+            document.getElementById("score").innerText = String(Math.floor(speed * 130)).padStart(6, '0');
         }
 
+        // AI ve Gyro kodları aynı şekilde korunmaktadır...
         async function initAI() {
             const vision = await FilesetResolver.forVisionTasks("https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/wasm");
             handLandmarker = await HandLandmarker.createFromOptions(vision, {
