--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Road Fighter - Ultimate NES Master</title>
+    <title>Road Fighter - Super Master Edition</title>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/vision_bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
     <style>
         body { margin: 0; overflow: hidden; background: #000; font-family: 'Courier New', monospace; }
         #webcam { display: none; }
-        
-        /* HİBRİT MENÜ KONTROLÜ */
         #start-screen {
             position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;
             background: #000; z-index: 500; display: flex; flex-direction: column;
@@ -24,8 +22,6 @@
         .menu-btn.active, .menu-btn:hover {
             border-color: #ffff00; color: #fff; background: #222; transform: scale(1.05); box-shadow: 0 0 20px #f00;
         }
-
-        /* NES HUD SİSTEMİ */
         #ui-side { position: absolute; top: 20px; right: 5%; color: #fff; z-index: 200; display: none; text-align: right; }
         .retro-label { color: #ffff00; font-size: 14px; }
         .retro-value { font-size: 28px; font-weight: bold; margin-bottom: 5px; }
@@ -36,11 +32,11 @@
 <body>
 
     <div id="start-screen">
-        <h1 style="color:#ffff00; text-shadow: 2px 2px #f00; font-size: 36px; margin-bottom:30px;">ROAD FIGHTER</h1>
+        <h1 style="color:#ffff00; text-shadow: 3px 3px #f00; font-size: 36px; margin-bottom:30px;">ROAD FIGHTER</h1>
         <div class="menu-btn active" onclick="startGame('camera')">1. AI CAMERA</div>
         <div class="menu-btn" onclick="startGame('gyro')">2. PHONE TILT</div>
-        <div class="menu-btn" onclick="startGame('keyboard')">3. KEYBOARD / REMOTE</div>
-        <p style="color: #666; font-size: 14px; margin-top: 20px;">DOKUNUN VEYA KUMANDA İLE SEÇİN</p>
+        <div class="menu-btn" onclick="startGame('keyboard')">3. REMOTE / KEYS / TOUCH</div>
+        <p style="color: #666; font-size: 14px; margin-top: 20px;">DOKUNUN, SÜRÜKLEYİN VEYA KUMANDA KULLANIN</p>
     </div>
 
     <div id="ui-side">
@@ -59,40 +55,32 @@
     <script type="module">
         import { HandLandmarker, FilesetResolver } from "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0";
 
-        // --- GLOBAL DEĞİŞKENLER ---
         window.controlMode = null;
         let steeringInput = 0, throttleInput = 0.8, smoothSteer = 0;
         let fuel = 100, score = 0, distance = 0, currentSpeed = 0;
-        let isGameOver = false, isInvincible = false, bgMusic;
+        let isGameOver = false, isInvincible = false, isTurbo = false;
+        let bgMusic;
 
-        // --- MENÜ VE KUMANDA YÖNETİMİ (Mİ BOX FİX) ---
-        let currentMenuIdx = 0;
+        // --- MENÜ VE KUMANDA ---
+        let currentIdx = 0;
         const menuBtns = document.querySelectorAll('.menu-btn');
         const modes = ['camera', 'gyro', 'keyboard'];
 
-        function updateMenuVisuals() {
-            menuBtns.forEach((btn, idx) => btn.classList.toggle('active', idx === currentMenuIdx));
-        }
-
         window.addEventListener('keydown', (e) => {
             if (window.controlMode === null) {
-                if (e.key === 'ArrowDown') { currentMenuIdx = (currentMenuIdx + 1) % 3; updateMenuVisuals(); }
-                if (e.key === 'ArrowUp') { currentMenuIdx = (currentMenuIdx + 2) % 3; updateMenuVisuals(); }
-                if (e.key === 'Enter') startGame(modes[currentMenuIdx]);
+                if (e.key === 'ArrowDown') { currentIdx = (currentIdx + 1) % 3; updateMenu(); }
+                if (e.key === 'ArrowUp') { currentIdx = (currentIdx + 2) % 3; updateMenu(); }
+                if (e.key === 'Enter') startGame(modes[currentIdx]);
             } else if (window.controlMode === 'keyboard') {
-                if (e.key === 'ArrowLeft') steeringInput -= 0.12;
-                if (e.key === 'ArrowRight') steeringInput += 0.12;
+                if (e.key === 'ArrowLeft') steeringInput -= 0.15;
+                if (e.key === 'ArrowRight') steeringInput += 0.15;
                 if (e.key === 'ArrowUp') throttleInput = 0.35;
             }
         });
+        window.addEventListener('keyup', (e) => { if (e.key === 'ArrowUp') throttleInput = 0.8; });
+        function updateMenu() { menuBtns.forEach((btn, i) => btn.classList.toggle('active', i === currentIdx)); }
 
-        window.addEventListener('keyup', (e) => {
-            if (window.controlMode === 'keyboard' && e.key === 'ArrowUp') throttleInput = 0.8;
-        });
-
-        // --- OYUN BAŞLATMA ---
         window.startGame = async function(mode) {
-            window.focus();
             if (game.sound.context.state === 'suspended') game.sound.context.resume();
             window.controlMode = mode;
             document.getElementById('start-screen').style.display = 'none';
@@ -100,10 +88,9 @@
             if (mode === 'camera') await initAI();
             else if (mode === 'gyro') initGyro();
             if (bgMusic) bgMusic.play({ loop: true, volume: 0.4 });
-            document.documentElement.requestFullscreen().catch(() => {});
         };
 
-        // --- PHASER OYUN ---
+        // --- PHASER CORE ---
         const config = {
             type: Phaser.AUTO,
             parent: 'game-container',
@@ -130,14 +117,15 @@
             const w = this.cameras.main.width, h = this.cameras.main.height;
             bgMusic = this.sound.add('gameMusic');
 
-            // NES Sol Panel (Harita)
+            // Sol Panel
             this.add.rectangle(30, h/2, 40, h, 0x555555).setDepth(5);
             this.add.rectangle(30, h/2, 4, h * 0.8, 0x000).setDepth(6);
             progressMarker = this.add.rectangle(30, h * 0.85, 12, 8, 0xff0000).setDepth(7);
 
+            // Yol
             const roadW = w * 0.5;
-            this.add.rectangle(w/2 - roadW/2 - 100, h/2, 200, h, 0x00aa00);
-            this.add.rectangle(w/2 + roadW/2 + 100, h/2, 200, h, 0x00aa00);
+            this.add.rectangle(w/2 - roadW/2 - 100, h/2, 200, h, 0x008800);
+            this.add.rectangle(w/2 + roadW/2 + 100, h/2, 200, h, 0x008800);
             this.add.rectangle(w/2, h/2, roadW + 10, h, 0xffffff); 
             this.add.rectangle(w/2, h/2, roadW, h, 0x333333); 
 
@@ -154,21 +142,29 @@
 
             player = this.physics.add.sprite(w/2, h - 140, 'playerCar').setScale(0.5).setDepth(100);
             
-            // --- KAZA: Yakıt Kaybı ---
+            // --- MOBİL DOKUNMATİK SÜRÜKLEME ---
+            this.input.on('pointermove', (pointer) => {
+                if (window.controlMode === 'keyboard' && pointer.isDown) {
+                    let centerX = window.innerWidth / 2;
+                    steeringInput = (pointer.x - centerX) / (window.innerWidth / 3);
+                    throttleInput = 0.35; // Dokunurken hızlan
+                }
+            });
+            this.input.on('pointerup', () => { if(window.controlMode === 'keyboard') throttleInput = 0.8; });
+
+            // Çarpışmalar
             this.physics.add.overlap(player, enemies, (p, e) => {
                 if (isInvincible) return;
-                fuel -= 15;
-                isInvincible = true;
-                player.setAlpha(0.5);
-                throttleInput = 1.0; 
+                fuel -= 20; isInvincible = true;
+                player.setAlpha(0.5); throttleInput = 1.0; 
                 this.time.delayedCall(2000, () => { isInvincible = false; player.setAlpha(1); });
             });
 
-            // --- YAKIT: S Aracı ---
             this.physics.add.overlap(player, fuels, (p, f) => {
-                fuel = Math.min(fuel + 35, 100);
-                f.destroy();
-                score += 1000;
+                fuel = Math.min(fuel + 35, 100); f.destroy(); score += 1000;
+                // TURBO BONUSU
+                isTurbo = true; player.setTint(0xff0000);
+                this.time.delayedCall(3000, () => { isTurbo = false; player.clearTint(); });
             });
 
             this.time.addEvent({
@@ -180,7 +176,11 @@
                         fuels.create(xPos, -100, 'special').setTint(0x00ffff).setScale(0.5).setDepth(90);
                     } else {
                         let r = 'enemy' + Phaser.Math.Between(1, 4);
-                        enemies.create(xPos, -100, r).setScale(0.5).setDepth(90);
+                        let enemy = enemies.create(xPos, -100, r).setScale(0.5).setDepth(90);
+                        // NES ZEKASI: Bazı araçlar şerit değiştirsin
+                        if (Math.random() > 0.7) {
+                            this.tweens.add({ targets: enemy, x: enemy.x + (Math.random() > 0.5 ? 60 : -60), duration: 2000, yoyo: true, repeat: -1 });
+                        }
                     }
                 },
                 loop: true
@@ -190,12 +190,13 @@
         function update() {
             if (!window.controlMode || isGameOver) return;
 
-            // 1. YAKIT VE HIZ MANTIĞI
-            let targetSpeed = Phaser.Math.Linear(16, 2, throttleInput);
-            if (fuel <= 0) targetSpeed = 0; // Yakıt bitince durdur
+            // 1. YAKIT VE HIZ (Turbo Kontrolü)
+            let maxSpeed = isTurbo ? 22 : 16;
+            let targetSpeed = Phaser.Math.Linear(maxSpeed, 2, throttleInput);
+            if (fuel <= 0) targetSpeed = 0;
             currentSpeed = Phaser.Math.Linear(currentSpeed, targetSpeed, 0.05);
 
-            if (currentSpeed > 2) fuel -= 0.045; // Tüketim
+            if (currentSpeed > 2) fuel -= 0.045;
             if (fuel < 0) fuel = 0;
 
             // 2. HAREKET
@@ -211,33 +212,22 @@
             player.x = (this.cameras.main.width/2) + (smoothSteer * (this.cameras.main.width * 0.28));
             player.angle = smoothSteer * 10;
 
-            // 3. MESAFE VE SOL ÇUBUK (FİXED)
+            // 3. İLERLEME
             if (currentSpeed > 1) {
                 distance += currentSpeed * 0.006; 
                 score += Math.floor(currentSpeed / 3);
             }
-            // Mesafe katsayısını 12 yaparak çubuğun tırmanmasını sağladım
             progressMarker.y = Phaser.Math.Clamp((this.cameras.main.height * 0.85) - (distance * 12), this.cameras.main.height * 0.1, this.cameras.main.height * 0.85);
 
-            // 4. UI GÜNCELLE
+            // 4. UI
             document.getElementById("kmh").innerText = Math.floor(currentSpeed * 8);
             document.getElementById("score").innerText = String(score).padStart(6, '0');
             document.getElementById("fuel-bar-fill").style.width = fuel + "%";
 
-            // 5. BİTİŞ KONTROLLERİ
-            if (fuel <= 0 && currentSpeed < 0.4) {
-                isGameOver = true;
-                alert("YAKIT BİTTİ! SKOR: " + score);
-                location.reload();
-            }
-            if (progressMarker.y <= this.cameras.main.height * 0.11) {
-                isGameOver = true;
-                alert("TEBRİKLER! ETAP TAMAMLANDI! SKOR: " + score);
-                location.reload();
-            }
+            if (fuel <= 0 && currentSpeed < 0.4) { isGameOver = true; alert("YAKIT BİTTİ! SKOR: " + score); location.reload(); }
+            if (progressMarker.y <= this.cameras.main.height * 0.11) { isGameOver = true; alert("TEBRİKLER! ETAP TAMAMLANDI! SKOR: " + score); location.reload(); }
         }
 
-        // --- AI & GYRO (HİÇBİR ŞEY EKSİLMEDİ) ---
         async function initAI() {
             const vision = await FilesetResolver.forVisionTasks("https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/wasm");
             handLandmarker = await HandLandmarker.createFromOptions(vision, {
@@ -245,8 +235,7 @@
                 runningMode: "VIDEO", numHands: 2
             });
             navigator.mediaDevices.getUserMedia({ video: true }).then(s => {
-                const vid = document.getElementById("webcam"); vid.srcObject = s;
-                vid.addEventListener("loadeddata", predictCamera);
+                const vid = document.getElementById("webcam"); vid.srcObject = s; vid.addEventListener("loadeddata", predictCamera);
             });
         }
         function initGyro() {
