--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Road Fighter - Master Fix</title>
+    <title>Road Fighter - Balanced Edition</title>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/vision_bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
     <style>
@@ -138,26 +138,18 @@
 
             player = this.physics.add.sprite(w/2, h - 140, 'playerCar').setScale(0.5).setDepth(100);
             
-            this.input.on('pointermove', (pointer) => {
-                if (window.controlMode === 'keyboard' && pointer.isDown) {
-                    let centerX = window.innerWidth / 2;
-                    steeringInput = (pointer.x - centerX) / (window.innerWidth / 3);
-                    throttleInput = 0.35;
-                }
-            });
-            this.input.on('pointerup', () => { if(window.controlMode === 'keyboard') throttleInput = 0.8; });
-
             // ÇARPIŞMALAR: Düşman Araçlar
             this.physics.add.overlap(player, enemies, (p, e) => {
                 if (isInvincible) return;
-                fuel -= 20; isInvincible = true;
-                player.setAlpha(0.5); throttleInput = 1.0; 
-                this.time.delayedCall(2000, () => { isInvincible = false; player.setAlpha(1); });
+                fuel -= 15; isInvincible = true;
+                player.setAlpha(0.5); 
+                currentSpeed *= 0.5; // Hızı anlık kes
+                this.time.delayedCall(1500, () => { isInvincible = false; player.setAlpha(1); });
             });
 
-            // ÇARPIŞMALAR: Mavi Yakıt Aracı (Ayrı Grup)
+            // ÇARPIŞMALAR: Mavi Yakıt Aracı (ÖZEL GRUP)
             this.physics.add.overlap(player, fuels, (p, f) => {
-                fuel = Math.min(fuel + 40, 100); 
+                fuel = Math.min(fuel + 35, 100); 
                 f.destroy(); 
                 score += 1000;
                 isTurbo = true; player.setTint(0x00ffff);
@@ -169,9 +161,8 @@
                 callback: () => {
                     if (!window.controlMode || isGameOver) return;
                     let xPos = Phaser.Math.Between(w/2 - roadW/2 + 40, w/2 + roadW/2 - 40);
-                    if (Math.random() < 0.2) {
+                    if (Math.random() < 0.25) { // Yakıt çıkma şansı
                         let f = fuels.create(xPos, -100, 'special').setTint(0x00ffff).setScale(0.5).setDepth(95);
-                        f.body.setAllowGravity(false);
                     } else {
                         let r = 'enemy' + Phaser.Math.Between(1, 4);
                         let enemy = enemies.create(xPos, -100, r).setScale(0.5).setDepth(90);
@@ -190,9 +181,9 @@
             let maxSpeed = isTurbo ? 22 : 16;
             let targetSpeed = Phaser.Math.Linear(maxSpeed, 2, throttleInput);
             if (fuel <= 0) targetSpeed = 0;
-            currentSpeed = Phaser.Math.Linear(currentSpeed, targetSpeed, 0.05);
+            currentSpeed = Phaser.Math.Linear(currentSpeed, targetSpeed, 0.04);
 
-            if (currentSpeed > 2) fuel -= 0.035; // Yakıt azalma hızı dengelendi
+            if (currentSpeed > 2) fuel -= 0.035; 
 
             steeringInput = Phaser.Math.Clamp(steeringInput, -1, 1);
             smoothSteer = Phaser.Math.Linear(smoothSteer, steeringInput, 0.08);
@@ -210,12 +201,13 @@
             player.x = (this.cameras.main.width/2) + (smoothSteer * (this.cameras.main.width * 0.28));
             player.angle = smoothSteer * 10;
 
-            // MESAFE: Etap uzunluğu artırıldı (Orijinal NES oranları)
+            // MESAFE AYARI: Yarışı 10 kat daha uzattık (0.00008)
             if (currentSpeed > 1) {
-                distance += currentSpeed * 0.0008; // Mesafe artış hızı düşürüldü
+                distance += currentSpeed * 0.00008; 
                 score += Math.floor(currentSpeed / 4);
             }
-            progressMarker.y = Phaser.Math.Clamp((this.cameras.main.height * 0.85) - (distance * 300), this.cameras.main.height * 0.1, this.cameras.main.height * 0.85);
+            // Sol çubuğun tırmanış hızı (distance * 2500)
+            progressMarker.y = Phaser.Math.Clamp((this.cameras.main.height * 0.85) - (distance * 2500), this.cameras.main.height * 0.1, this.cameras.main.height * 0.85);
 
             document.getElementById("kmh").innerText = Math.floor(currentSpeed * 8);
             document.getElementById("score").innerText = String(score).padStart(6, '0');
