--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Road Fighter - 1 Minute Challenge</title>
+    <title>Road Fighter - 80 Second Challenge</title>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/vision_bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
     <style>
@@ -55,7 +55,8 @@
 
         window.controlMode = null;
         let steeringInput = 0, throttleInput = 0.8, smoothSteer = 0;
-        let fuel = 100, score = 0, distance = 0, currentSpeed = 0;
+        let fuel = 100, score = 0, distanceMoved = 0, currentSpeed = 0;
+        const totalCourseLength = 10000; // Yarış mesafesi (60-80 saniye sürecek)
         let isGameOver = false, isInvincible = false, isTurbo = false;
         let bgMusic;
 
@@ -117,6 +118,7 @@
             const w = this.cameras.main.width, h = this.cameras.main.height;
             bgMusic = this.sound.add('gameMusic');
 
+            // İlerleme Paneli
             this.add.rectangle(30, h/2, 40, h, 0x555555).setDepth(5);
             this.add.rectangle(30, h/2, 4, h * 0.8, 0x000).setDepth(6);
             progressMarker = this.add.rectangle(30, h * 0.85, 12, 8, 0xff0000).setDepth(7);
@@ -141,16 +143,14 @@
             player = this.physics.add.sprite(w/2, h - 140, 'playerCar').setScale(0.5).setDepth(100);
             
             // --- MOBİL DOKUNMATİK (ELLE YÖNETME) ---
-            this.input.on('pointermove', (pointer) => {
-                if (window.controlMode === 'keyboard' && pointer.isDown) {
-                    let centerX = window.innerWidth / 2;
-                    steeringInput = (pointer.x - centerX) / (window.innerWidth / 4);
+            this.input.on('pointermove', (p) => {
+                if (window.controlMode === 'keyboard' && p.isDown) {
+                    steeringInput = (p.x - (window.innerWidth/2)) / (window.innerWidth/4);
                     throttleInput = 0.35;
                 }
             });
             this.input.on('pointerup', () => { if(window.controlMode === 'keyboard') { throttleInput = 0.8; steeringInput = 0; } });
 
-            // ÇARPIŞMALAR
             this.physics.add.overlap(player, enemies, (p, e) => {
                 if (isInvincible) return;
                 fuel -= 15; isInvincible = true;
@@ -159,9 +159,7 @@
             });
 
             this.physics.add.overlap(player, fuels, (p, f) => {
-                fuel = Math.min(fuel + 30, 100); 
-                f.destroy(); 
-                score += 1000;
+                fuel = Math.min(fuel + 25, 100); f.destroy(); score += 1000;
                 isTurbo = true; player.setTint(0x00ffff);
                 this.time.delayedCall(3000, () => { isTurbo = false; player.clearTint(); });
             });
@@ -171,8 +169,8 @@
                 callback: () => {
                     if (!window.controlMode || isGameOver) return;
                     let xPos = Phaser.Math.Between(w/2 - roadW/2 + 40, w/2 + roadW/2 - 40);
-                    if (Math.random() < 0.15) {
-                        let f = fuels.create(xPos, -100, 'special').setTint(0x00ffff).setScale(0.5).setDepth(95);
+                    if (Math.random() < 0.18) {
+                        fuels.create(xPos, -100, 'special').setTint(0x00ffff).setScale(0.5).setDepth(95);
                     } else {
                         let r = 'enemy' + Phaser.Math.Between(1, 4);
                         let enemy = enemies.create(xPos, -100, r).setScale(0.5).setDepth(90);
@@ -193,7 +191,8 @@
             if (fuel <= 0) targetSpeed = 0;
             currentSpeed = Phaser.Math.Linear(currentSpeed, targetSpeed, 0.04);
 
-            if (currentSpeed > 2) fuel -= 0.035; // Yakıt bitme süresi ~50-60 saniye
+            // YAKIT TÜKETİMİ: 100 birim yakıt yaklaşık 60 saniyede biter
+            if (currentSpeed > 2) fuel -= 0.028; 
 
             steeringInput = Phaser.Math.Clamp(steeringInput, -1, 1);
             smoothSteer = Phaser.Math.Linear(smoothSteer, steeringInput, 0.1);
@@ -207,26 +206,30 @@
             player.x = (this.cameras.main.width/2) + (smoothSteer * (this.cameras.main.width * 0.28));
             player.angle = smoothSteer * 12;
 
-            // --- MESAFE AYARI (1 DAKİKA SÜRECEK ŞEKİLDE) ---
+            // --- YENİ MESAFE MANTIĞI ---
             if (currentSpeed > 1) {
-                distance += currentSpeed * 0.0001; // 0.00008'den biraz hızlandırıldı
+                distanceMoved += currentSpeed;
                 score += Math.floor(currentSpeed / 4);
             }
-            // Çubuğun tepesi (height * 0.1) bitiş noktasıdır.
-            progressMarker.y = Phaser.Math.Clamp((this.cameras.main.height * 0.85) - (distance * 600), this.cameras.main.height * 0.1, this.cameras.main.height * 0.85);
 
-            document.getElementById("kmh").innerText = Math.floor(currentSpeed * 12); // Orijinal görünüm için çarpan artırıldı
+            // Kırmızı imlecin hareketi: distanceMoved / totalCourseLength oranına göre
+            let progress = distanceMoved / totalCourseLength;
+            progressMarker.y = (this.cameras.main.height * 0.85) - (progress * (this.cameras.main.height * 0.75));
+
+            document.getElementById("kmh").innerText = Math.floor(currentSpeed * 12);
             document.getElementById("score").innerText = String(score).padStart(6, '0');
             document.getElementById("fuel-bar-fill").style.width = fuel + "%";
 
+            // BİTİŞ KONTROLÜ
             if (fuel <= 0 && currentSpeed < 0.4) { isGameOver = true; alert("YAKIT BİTTİ! SKOR: " + score); location.reload(); }
-            if (progressMarker.y <= this.cameras.main.height * 0.11) {
+            if (distanceMoved >= totalCourseLength) {
                 isGameOver = true;
                 alert("TEBRİKLER! ETABI TAMAMLADINIZ! SKOR: " + score);
                 location.reload();
             }
         }
 
+        // AI ve Jiroskop fonksiyonları...
         async function initAI() {
             const vision = await FilesetResolver.forVisionTasks("https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0/wasm");
             handLandmarker = await HandLandmarker.createFromOptions(vision, {
